
    * Converted FAQ from bullet lists to definition lists.

  * Bug Fixes
    ---------
    * Mended issue where stamp descriptions were not loading
      when "getenv()" (e.g., "getenv("LANGUAGE")") returned an
      empty string, rather than a NULL.

    * Mended bug where corrupt text would appear as stamp
      descriptions, if we failed to know what language to use
      (see above).

  * New Translations:
    -----------------

    * Sardinian translation
      Flavia Floris <flavia.efloris@gmail.com>

  * Translation Updates:
    --------------------
    * Basque translation
      Alexander Gabilondo <alexgabi@irakasle.eus>

    * Catalan translation
      Pere Pujal i Carabantes <pere@fornol.no-ip.org>

    * Galician translation
      Miguel Bouzada <mbouzada@gmail.com>

    * Icelandic translation
      Sveinn í Felli <sv1@fellsnet.is>

    * Japanese translation & Japanese README documentation
      TOYAMA Shin-ichi <shin1@wmail.plala.or.jp>

    * Santali translation (Ol-Chiki)
      Prasanta Hembram <prasantahembram720@gmail.com>

  * Misc
    ----
    * Improved safety when copying things into string buffers.


2020.April.24 (0.9.24)
  * New tools
    ---------
    * Fill
      Not actually a new tool, but promoted from a "Magic" tool
      to a full-fledge tool in the "Tools" bar.  However, also
      avoids filling "Undo" buffer with snapshots of the drawing,
      if the fill does nothing (e.g., if you click the same spot
      a second time).

  * Ports & Building
    ----------------
    * Updates to build on Haiku.
      Luc 'Begasus' Schrijvers <begasus@gmail.com>

    * Replaced KDE (older, KDE4, in fact) specific icon and
      launcher (.desktop file) installation & uninstallaton
      invocations in Makefile with those that use Freedesktop.org
      `xdg-...` tools.

    * macOS build documentation updates.
      Mark K. Kim <markuskimius@gmail.com>

    * Wrapped some debug output in "#ifdef DEBUG" tests,